<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.OtpActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            >
            <ImageView
                android:id="@+id/arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_back"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="20dp"
                />

        </RelativeLayout>

        <ImageView
            android:id="@+id/sendotp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="90dp"
            android:src="@drawable/phone"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:text="@string/otp_send"
            android:textColor="@color/black"
            android:textSize="14sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="30dp"
            android:gravity="center"
            android:text="@string/enter_mobile"
            android:textColor="@color/black"
            android:textSize="14sp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToOutline="true"
                app:ccp_defaultPhoneCode="254"
                app:ccp_showNameCode="false"
                app:ccp_showArrow="true"
                app:ccp_hintExampleNumber="true"
                app:ccp_autoFormatNumber="true"
                app:ccp_customMasterCountries="KE,UG,TZ,GH,SN,IN,ET,ZM"

                />


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/black"
               >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:inputType="phone"
                    android:singleLine="true"

                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/getOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Get OTP"
            android:layout_margin="30dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/backgroundbutton"
            />

    </LinearLayout>
</ScrollView>

