<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"

        >
        <ImageView
            android:id="@+id/arrow_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:layout_centerVertical="true"
            android:layout_marginHorizontal="20dp"
            />

    </RelativeLayout>
        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="10dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="15dp"

            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp"
                        android:gravity="center_horizontal"

                        >
                        <ImageView
                            android:id="@+id/errorIcon"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/error"
                            />
                        <TextView
                            android:id="@+id/responseTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/error_doc"
                            android:textColor="@color/red"
                            android:textSize="12sp"
                            />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/error_title"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        />
                    <TextView
                        android:id="@+id/txtDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/error_msg"
                        android:textColor="@color/light_black"
                        android:textSize="14sp"
                        />

                    <ImageView
                        android:id="@+id/sampleimg"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:src="@drawable/identity"/>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:weightSum="2"
                        >
                        <Button
                            android:id="@+id/uplaodImg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="UPLOAD "
                            android:layout_margin="20dp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:background="@drawable/backgroundbutton"
                            android:layout_weight="1"
                            />

                        <Button
                            android:id="@+id/proceed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="PROCEED  "
                            android:layout_margin="20dp"
                            android:textColor="@color/white"
                            android:textStyle="bold"
                            android:background="@drawable/backgroundbuttongray"
                            android:layout_weight="1"
                            />

                    </LinearLayout>


                </LinearLayout>

            </ScrollView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>

